# RayTrace

./: .gitignore  BVH.hpp  CMakeLists.txt  box.hpp  camera.hpp  customScene.hpp  externalTools.hpp  hittable.hpp  main.cpp  material.hpp  perlinNoise.hpp  ray.hpp  sphere.hpp  test.txt  texture.hpp  vec3.hpp
CPU/: BVH.hpp  ONB.hpp  PDF.hpp  Triangle.hpp  box.hpp  customScene.hpp  externalTools.hpp  hittable.hpp  main.cpp  material.hpp  perlinNoise.hpp  rect.hpp  sphere.hpp  texture.hpp  vec3.hpp
CPU/lib/: stb_image.dylib
GPU/: CMakeLists.txt  main.cpp
GPU/shaders/: fshader.fsh  pass2.fsh  pass3.fsh
PBRT/: Point.h  Vector.h
RTWEEK/CPU/: AABB.hpp  CMakeLists.txt  PDF.hpp  README.md  Triangle.hpp  box.hpp  constant_medium.hpp  customScene.hpp  externalTools.hpp  hittable.hpp  main.cpp  material.hpp  rect.hpp  texture.hpp
RTWEEK/CPU/lib/: stb_image.h  stb_image_write.h
RTWEEK/GPU/: CMakeLists.txt  main.cpp
RTWEEK/GPU/lib/: hdrloader.h
RTWEEK/GPU/shaders/: fshader.fsh  pass2.fsh  pass3.fsh  vshader.vsh
test/: CMakeLists.txt  main.cpp  save.txt  test.txt
